# llm-playground

./: README.md  environment.yml  pyproject.toml
api/: gemini_api.py  server.py
api/routers/: index.py  post.py
api/templates/: home.html  llm.html
app/: server.py
app/routers/: index.py
src/: main.py
